--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-    <title>Hallo Welt</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Hallo Welt">
-    <meta name="author" content="Aljosha Vieth">
+    <title>Aljosha Vieth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Quicksand" rel="stylesheet">
@@ -12,29 +10,29 @@
 </head>
 
 <body>
-
-    <div class="card profile">
-        <img src="img/AljoshaVieth.jpg" alt="Profile" style="width:100%">
-        <div class="container">
-            <h2>Aljosha Vieth</h2>
-            <h5>Computer Science in Media Student</h5>
-            <p>Hallo, ich bin Aljosha. Ich bin 20 Jahre alt und studiere Medieninformatik an der Hochschule Furtwangen.
-            <br>In meiner Freizeit spiele ich gerne Fußball, programmiere oder fotografiere.
-            <p>
-                <a href="https://github.com/AljoshaVieth" target="_blank">
-                    <i class="fab fa-github fa-2x"></i>
-                </a>
-                <a href="mailto:mail@aljosha.eu">
-                    <i class="far fa-envelope fa-2x"></i>
-                </a>
-                <a href="https://instagram.com/AljoshaVieth" target="_blank">
-                    <i class="fab fa-instagram fa-2x"></i>
-                </a>
-            </p>
+    <div id="content">
+        <div class="card profile child">
+            <img src="img/AljoshaVieth.jpg" alt="Profile" style="width:100%">
+            <div class="container">
+                <h2>Aljosha Vieth</h2>
+                <p>Computer Science in Media Student</p>
+                <p><a href="http://furtwangen-university.com">@HFU</a></p>
+                <div class="links">
+                    <a href="https://github.com/AljoshaVieth" target="_blank">
+                        <i class="fab fa-github fa-2x"></i>
+                    </a>
+                    <a href="mailto:mail@aljosha.eu">
+                        <i class="far fa-envelope fa-2x"></i>
+                    </a>
+                    <a href="https://instagram.com/AljoshaVieth" target="_blank">
+                        <i class="fab fa-instagram fa-2x"></i>
+                    </a>
+                </div>
+            </div>
+            <div id="footer">
+                <a href="impressum.html" target="_blank">Impresum</a> <a href="datenschutz.html" target="_blank">Datenschutz</a>
+            </div>
         </div>
-        <div id="footer">
-        <a href="impressum.html" target="_blank">Impresum</a> <a href="datenschutz.html" target="_blank">Datenschutz</a>
-    </div>
     </div>
 
 </body></html>
