--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Aljosha Vieth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
     <div id="content">
-        <div class="card profile child">
-            <img src="img/AljoshaVieth.jpg" alt="Profile" style="width:100%">
-            <div class="container">
+        <div class="card profile">
+            <div id="card-image">
+                <img src="img/AljoshaVieth.jpg" alt="Profile">
+            </div>
+            <div id="card-text">
                 <h2>Aljosha Vieth</h2>
                 <p>Computer Science in Media Student</p>
-                <p><a href="http://furtwangen-university.com">@HFU</a></p>
+                <p><a href="http://furtwangen-university.com" target="_blank">@FurtwangenUniversity</a></p>
                 <div class="links">
                     <a href="https://github.com/AljoshaVieth" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
-                    <a href="mailto:mail@aljosha.eu">
+                    <a href="m.php">
                         <i class="far fa-envelope fa-2x"></i>
                     </a>
                     <a href="https://instagram.com/AljoshaVieth" target="_blank">
@@ -29,10 +31,9 @@
                     </a>
                 </div>
             </div>
-            <div id="footer">
-                <a href="impressum.html" target="_blank">Impresum</a> <a href="datenschutz.html" target="_blank">Datenschutz</a>
-            </div>
         </div>
     </div>
 
-</body></html>
+</body>
+
+</html>
