--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
     <div id="content">
         <div class="card profile">
             <div id="card-image">
-                <img src="img/AljoshaVieth.jpg" alt="Profile">
+                <img src="img/ajv.jpg" alt="Profile">
             </div>
             <div id="card-text">
                 <h2>Aljosha Vieth</h2>
-                <p>Computer Science in Media Student</p>
-                <p><a href="http://furtwangen-university.com" target="_blank">@FurtwangenUniversity</a></p>
+                <p>Hey there! I´m a 24-year-old computer science student from Germany.</p><p> I like to create new things and solve problems with software.</p>
                 <div class="links">
                     <a href="https://github.com/AljoshaVieth" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
                     </a>
                     <a href="m.php">
                         <i class="far fa-envelope fa-2x"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/aljosha-vieth-754b53184/" target="_blank">
+                        <i class="fab fa-linkedin fa-2x"></i>
                     </a>
                     <a href="https://instagram.com/AljoshaVieth" target="_blank">
                         <i class="fab fa-instagram fa-2x"></i>
