--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div id="card-text">
                 <h2>Aljosha Vieth</h2>
-                <p>Hey there! I´m a 24-year-old computer science student from Germany.</p><p> I like to create new things and solve problems with software.</p>
+                <p>Hey there! I'm a 24-year-old computer science student from Germany.</p><p> I like to create new things and solve problems with software.</p>
                 <div class="links">
                     <a href="https://github.com/AljoshaVieth" target="_blank">
                         <i class="fab fa-github fa-2x"></i>
